# Mailing-Lists-Archiver

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  _typos.toml  codemeta.json  docker-compose.yaml
.github/workflows/: anonymizer-lint.yaml  lint.yaml  parser-lint.yaml  parser-tests.yaml  py-lint.yaml  py-tests.yaml  rust-lint.yaml  tests.yaml
analysis/: Containerfile  compose.yaml  pyproject.toml
analysis/src/: experimenting.ipynb  make_analysis.py  unique_authors.py
anonymizer/: Containerfile  compose.yaml  pyproject.toml
anonymizer/src/: constants.py  (+1 more)
dataset/: README.md  compression_script.sh  decompression_script.sh
docs/: fluxogram.excalidraw
mlh-archiver/: Cargo.toml
mlh_graph/: Cargo.toml  pyproject.toml
mlh_graph/mlh_graph/: __init__.py
mlh_graph/src/: lib.rs  mlhid.rs  mlhtypes.rs
mlh_graph/tests/: test_mlh_graph.py
mlh_parser/: Containerfile  compose.yaml  noxfile.py  pyproject.toml
mlh_parser/src/: main.py  sanity_check.py
mlh_parser/src/mlh_parser/: __init__.py  constants.py  date_parser.py  email_reader.py  parser.py  parser_algorithm.py
mlh_parser/tests/: helpers.py  test_attributions.py  test_dates.py  test_parsers.py  test_patches.py
mlh_parser/tests/date_cases/: de.denx.lists.u-boot-603361.date.pytest  de.denx.lists.u-boot-603361.eml  de.denx.lists.u-boot-604483.date.pytest  de.denx.lists.u-boot-604483.eml  de.denx.lists.u-boot-604514.date.pytest  de.denx.lists.u-boot-604514.eml  de.denx.lists.u-boot-604550.date.pytest  de.denx.lists.u-boot-604550.eml  org.kernel.vger.linux-hwmon-6592.date.pytest  org.kernel.vger.linux-hwmon-6592.eml  org.kernel.vger.linux-kernel-236731.date.pytest  org.kernel.vger.linux-kernel-236731.eml  org.kernel.vger.linux-kernel-25037.date.pytest  org.kernel.vger.linux-kernel-25037.eml  org.kernel.vger.linux-kernel-290312.date.pytest  org.kernel.vger.linux-kernel-290312.eml  org.kernel.vger.linux-kernel-41804.date.pytest  org.kernel.vger.linux-kernel-41804.eml  org.kernel.vger.linux-kernel-634518.date.pytest  org.kernel.vger.linux-kernel-634518.eml  org.kernel.vger.linux-kselftest-60891.date.pytest  org.kernel.vger.linux-kselftest-60891.eml  org.kernel.vger.linux-pci-84345.date.pytest  org.kernel.vger.linux-pci-84345.eml  org.kernel.vger.netdev-2.date.pytest  org.kernel.vger.netdev-2.eml  org.kernel.vger.netdev-271.date.pytest  org.kernel.vger.netdev-271.eml  org.kernel.vger.netfilter-9315.date.pytest  org.kernel.vger.netfilter-9315.eml  org.kernel.vger.netfilter-9432.date.pytest  org.kernel.vger.netfilter-9432.eml  org.kernel.vger.platform-driver-x86-39097.date.pytest  org.kernel.vger.platform-driver-x86-39097.eml  org.kvack.linux-mm-1224.date.pytest  org.kvack.linux-mm-1224.eml  org.kvack.linux-mm-2170.date.pytest  org.kvack.linux-mm-2170.eml  org.kvack.linux-mm-2205.date.pytest  org.kvack.linux-mm-2205.eml
mlh_parser/tests/real_cases/: 14.code.pytest  14.eml  14.trailers.pytest  26435.code.pytest  26435.eml  26435.trailers.pytest  3383.code.pytest  3383.eml  3383.trailers.pytest  64764.code.pytest  64764.eml  666.code.pytest  666.eml  666.trailers.pytest
parser/: Containerfile  compose.yaml  pyproject.toml
src/: config.rs  errors.rs  file_utils.rs  main.rs  range_inputs.rs  worker.rs
(+25 files in other folders)
