[package]
name = "mailing-lists-archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["json", "yaml"] }
crossbeam-channel = "0.5.15"
env_logger = { version = "0.11.8", features = ["kv"] }
glob = "0.3.3"
inquire = { version = "0.9", default-features = false, features = ["termion"] }
log = { version = "0.4.28", features = ["kv", "std"] }
nntp = { path = "./rust-nntp" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
