[project]
name = "mlh-parser"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Rafael Passos", email = "rafael@rcpassos.me" }]
requires-python = ">=3.11"
dependencies = [
    "polars~=1.35",
    "python-dateutil>=2.9.0.post0",
    "tqdm~=4.67",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"freezegun>=1.5.5",
]


[project.scripts]
mlh-parser = "mlh_parser:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
# requires = ['setuptools']
# build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
pythonpath = ["./src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
		"freezegun>=1.5.5",
]
